--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "node-periodic-table": "^0.0.6",
     "node-webpmux": "^3.1.3",
     "node-youtube-music": "^0.9.0",
+    "openai": "^3.1.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "pino": "^8.10.0",
