--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atlas",
   "version": "2.0.0",
-  "description": "set",
+  "description": "Most Advanced WhatsApp Bot ever made.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
